tests/ui/traits/next-solver/const-param-placeholder.fail.stderr
error[E0277]: the trait bound `[T; N]: Foo` is not satisfied
  --> $DIR/const-param-placeholder.rs:17:17
   |
LL |     needs_foo::<[T; N]>();
   |                 ^^^^^^ the trait `Foo` is not implemented for `[T; N]`
   |
   = help: the trait `Foo` is implemented for `[T; 1]`
note: required by a bound in `needs_foo`
  --> $DIR/const-param-placeholder.rs:8:17
   |
LL | fn needs_foo<F: Foo>() {}
   |                 ^^^ required by this bound in `needs_foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
